filled out manifest

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,7 +14,7 @@
         <div class="linkFlex">
             <a href id="settingsButton">Settings</a>
             <!-- insert github link below -->
-            <a href="https://github.com/NaN0987" target="_blank">View Github Page</a>
+            <a href="https://github.com/NaN0987/better-youtube" target="_blank">View Github Page</a>
         </div>
 
         <script src="popup.js"></script>
