Made options page functional

--- a/options/options.html
+++ b/options/options.html
@@ -8,37 +8,30 @@
 
 <body>
     <div class="mainContainer">
-        <p>Note: changes to these options will require you to reload Quora before they take effect.</p>
+        <p>Note: changes to these options will require you to reload Youtube before they take effect.</p>
         
         <div class="optionContainer">
-            <div class="option">
-                <h1>Set website theme: </h1>
-                <select id="theme">
-                    <option value="dark">Dark</option>
-                    <option value="light">Light</option>
-                </select>
-            </div>
 
             <div class="option">
-                <h1>Remove AI response</h1>
+                <h1>Automatically skip ads</h1>
                 <label class="switch">
-                    <input type="checkbox" id="removeAIResponse">
+                    <input type="checkbox" id="skipAds">
                     <span class="slider"></span>
                 </label>
             </div>
 
             <div class="option">
-                <h1>Remove "Related Questions" boxes in feed</h1>
+                <h1>Remove unrelated videos when searching</h1>
                 <label class="switch">
-                    <input type="checkbox" id="removeRelatedQuestionsBox">
+                    <input type="checkbox" id="filterSearch">
                     <span class="slider"></span>
                 </label>
             </div>
 
             <div class="option">
-                <h1>Redirect from the main signup page to the search page</h1>
+                <h1>Convert shorts into a video format</h1>
                 <label class="switch">
-                    <input type="checkbox" id="redirectToSearchPage">
+                    <input type="checkbox" id="convertShorts">
                     <span class="slider"></span>
                 </label>
             </div>
