--- a/options/options.html
+++ b/options/options.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html style="color-scheme: dark;">
 <head>
     <link rel="stylesheet" href="options.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Options - Extension Name</title>
+    <title>Options - Better YouTube</title>
 </head>
 
 <body>
     <div class="mainContainer">
-        <p>Note: changes to these options will require you to reload Youtube before they take effect.</p>
+        <p>Note: changing these options will require you to reload YouTube before they take effect.</p>
         
         <div class="optionContainer">
 
