--- a/options/options.html
+++ b/options/options.html
@@ -8,6 +8,12 @@
 
 <body>
     <div class="mainContainer">
+
+        <div class="titleFlex">
+            <img src="../images/icon.png" style="width: 48px;"/> 
+            <h1>Better YouTube</h1>
+        </div>
+
         <p>Note: changing these options will require you to reload YouTube before they take effect.</p>
         
         <div class="optionContainer">
@@ -16,6 +22,22 @@
                 <h1>Automatically skip ads</h1>
                 <label class="switch">
                     <input type="checkbox" id="skipAds">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
+            <div class="option">
+                <h1>Remove ads from home page</h1>
+                <label class="switch">
+                    <input type="checkbox" id="filterHomePage">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
+            <div class="option">
+                <h1>Show dislikes</h1>
+                <label class="switch">
+                    <input type="checkbox" id="showDislikes">
                     <span class="slider"></span>
                 </label>
             </div>
