--- a/popup/popup.html
+++ b/popup/popup.html
@@ -35,6 +35,22 @@
                         <span class="slider"></span>
                     </label>
                 </div>
+
+                <div class="option">
+                    <h1>Remove ads from home page</h1>
+                    <label class="switch">
+                        <input type="checkbox" id="filterHomePage">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+    
+                <div class="option">
+                    <h1>Show dislikes</h1>
+                    <label class="switch">
+                        <input type="checkbox" id="showDislikes">
+                        <span class="slider"></span>
+                    </label>
+                </div>
     
                 <div class="option">
                     <h1>Remove unrelated videos when searching</h1>
@@ -58,7 +74,7 @@
         <div class="linkFlex">
             <a href id="settingsButton">
                 <div class = "link">
-                    <p>Advanced Settings</p>
+                    <p>More Settings</p>
                 </div>
             </a>
                 <!-- insert github link below -->
