added aggressive ad blocking

--- a/options/options.html
+++ b/options/options.html
@@ -57,6 +57,13 @@
                     <span class="slider"></span>
                 </label>
             </div>
+            <div class="option">
+                <h1>Agressive Ad Blocking</h1>
+                <label class="switch">
+                    <input type="checkbox" id="agressiveAdBlocking">
+                    <span class="slider"></span>
+                </label>
+            </div>
         </div>
         
     </div>
