--- a/popup/popup.html
+++ b/popup/popup.html
@@ -67,6 +67,13 @@
                         <span class="slider"></span>
                     </label>
                 </div>
+                <div class="option">
+                    <h1>Agressive ad blocking</h1>
+                    <label class="switch">
+                        <input type="checkbox" id="agressiveAdBlocking">
+                        <span class="slider"></span>
+                    </label>
+                </div>
             </div>
             
         </div>
